--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - NODE_ENV=production
       - DISCORD_BOT_HEALTH_PORT=8081
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "8081:8081"
     networks:
@@ -34,6 +35,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "3001:3001"
     networks:
@@ -54,6 +56,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=5055
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "5055:5055"
     networks:
@@ -74,6 +77,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "3002:3001"
     networks:
@@ -88,6 +92,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=8080
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "8080:8080"
     networks:
@@ -107,6 +112,7 @@ services:
     environment:
       - NODE_ENV=production
       - DAD_BOT_HEALTH_PORT=8082
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "8082:8082"
     networks:
@@ -122,6 +128,7 @@ services:
     environment:
       - NODE_ENV=production
       - TRUST_ROLLUP_HEALTH_PORT=8083
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "8083:8083"
     networks:
@@ -137,6 +144,7 @@ services:
     environment:
       - NODE_ENV=production
       - JTT_BOT_HEALTH_PORT=8084
+      - SKIP_ENV_VALIDATION=1
     ports:
       - "8084:8084"
     networks:
