split slash commands and rewire

--- a/apps/chrome-extension/src/manifest.json
+++ b/apps/chrome-extension/src/manifest.json
@@ -28,6 +28,17 @@
         "content.js"
       ],
       "run_at": "document_idle"
+    },
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "page-bridge.js"
+      ],
+      "world": "MAIN",
+      "run_at": "document_idle"
     }
   ],
   "icons": {
