--- a/apps/reverse-proxy/nginx.conf
+++ b/apps/reverse-proxy/nginx.conf
@@ -17,6 +17,9 @@ http {
 
   sendfile        on;
   keepalive_timeout  65;
+
+  # Docker internal DNS resolver
+  resolver 127.0.0.11 valid=30s;
   
   # Gzip compression
   gzip on;
@@ -41,59 +44,59 @@ http {
   # ============================================================================
 
   # Legacy upstreams (internal Docker networking)
-  upstream landing_upstream {
-    server landing:80;
-  }
+  # upstream landing_upstream {
+  #   server landing:80;
+  # }
 
-  upstream dashboard_service_upstream {
-    server dashboard:3000;
-  }
+  # upstream dashboard_service_upstream {
+  #   server dashboard:3000;
+  # }
   
-  upstream user_dashboard_upstream {
-    server user-dashboard:6001;
-  }
+  # upstream user_dashboard_upstream {
+  #   server user-dashboard:6001;
+  # }
 
-  upstream gameplay-analyzer {
-    server gameplay-analyzer:7072;
-  }
+  # upstream gameplay-analyzer {
+  #   server game-arena:3010;
+  # }
 
-  upstream enhanced-analyzer {
-    server enhanced-analyzer:7074;
-  }
+  # upstream enhanced-analyzer {
+  #   server enhanced-analyzer:7074;
+  # }
 
-  upstream screen-analyzer {
-    server screen-analyzer:7073;
-  }
+  # upstream screen-analyzer {
+  #   server screen-analyzer:7073;
+  # }
 
-  upstream trust-rollup {
-    server trust-rollup:8082;
-  }
+  # upstream trust-rollup {
+  #   server trust-rollup:8082;
+  # }
 
   # New subdomain upstreams
-  upstream dashboard_app_upstream {
-    server dashboard-app:3000;
-    keepalive 32;
-  }
+  # upstream dashboard_app_upstream {
+  #   server dashboard:3000;
+  #   keepalive 32;
+  # }
 
-  upstream api_gateway_upstream {
-    server api:3001;
-    keepalive 64;
-  }
+  # upstream api_gateway_upstream {
+  #   server api:3001;
+  #   keepalive 64;
+  # }
 
-  upstream justthetip_upstream {
-    server justthetip:3002;
-    keepalive 32;
-  }
+  # upstream justthetip_upstream {
+  #   server justthetip:3002;
+  #   keepalive 32;
+  # }
 
-  upstream bot_upstream {
-    server discord-bot:8081;
-    keepalive 16;
-  }
+  # upstream bot_upstream {
+  #   server discord-bot:8081;
+  #   keepalive 16;
+  # }
 
-  upstream worker_upstream {
-    server worker:3004;
-    keepalive 16;
-  }
+  # upstream worker_upstream {
+  #   server worker:3004;
+  #   keepalive 16;
+  # }
 
   # ============================================================================
   # SSL Configuration (shared)
@@ -105,6 +108,14 @@ http {
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:50m;
   ssl_session_tickets off;
+
+  # SSL certificate paths (placeholders - will be updated after certbot runs)
+  # For now, we still use the self-signed ones but define the location clearly
+  ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+  ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+  # Production certs will be at:
+  # ssl_certificate     /etc/letsencrypt/live/tiltcheck.me/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/tiltcheck.me/privkey.pem;
 
   # ============================================================================
   # HTTP Server - Redirect to HTTPS + ACME Challenge
@@ -119,9 +130,15 @@ http {
       root /var/www/certbot;
     }
 
-    # Redirect all HTTP to HTTPS
+    # Redirect all HTTP to HTTPS if not already coming from a secure proxy
     location / {
-      return 301 https://$host$request_uri;
+      if ($http_x_forwarded_proto != "https") {
+        return 301 https://$host$request_uri;
+      }
+      # If already on https (from Apache), fall through or include root proxy logic?
+      # Actually, better to have a single entry point.
+      # I'll just change the main server blocks to listen on 80 too.
+      return 404;
     }
   }
 
@@ -130,17 +147,20 @@ http {
   # ============================================================================
 
   server {
-    listen 443 ssl http2;
+    listen 80;
+    listen 443 ssl;
+    http2 on;
     server_name dashboard.tiltcheck.me;
 
-    ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+    # ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+    # ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
 
     # HSTS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
-      proxy_pass http://dashboard_app_upstream;
+      set $dashboard_url http://dashboard:3000;
+      proxy_pass $dashboard_url;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -157,13 +177,15 @@ http {
 
     # Next.js static assets
     location /_next/static/ {
-      proxy_pass http://dashboard_app_upstream;
+      set $dashboard_url http://dashboard:3000;
+      proxy_pass $dashboard_url;
       proxy_cache_valid 200 365d;
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     location /health {
-      proxy_pass http://dashboard_app_upstream/api/health;
+      set $dashboard_url http://dashboard:3000;
+      proxy_pass $dashboard_url/api/health;
       access_log off;
     }
   }
@@ -173,11 +195,13 @@ http {
   # ============================================================================
 
   server {
-    listen 443 ssl http2;
+    listen 80;
+    listen 443 ssl;
+    http2 on;
     server_name api.tiltcheck.me;
 
-    ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+    # ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+    # ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
@@ -194,7 +218,8 @@ http {
 
     # Auth endpoints (stricter rate limiting)
     location /auth/ {
-      proxy_pass http://api_gateway_upstream;
+      set $api_url http://api:3001;
+      proxy_pass $api_url;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -207,7 +232,8 @@ http {
 
     # All other API endpoints
     location / {
-      proxy_pass http://api_gateway_upstream;
+      set $api_url http://api:3001;
+      proxy_pass $api_url;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -224,7 +250,8 @@ http {
     }
 
     location /health {
-      proxy_pass http://api_gateway_upstream/health;
+      set $api_url http://api:3001;
+      proxy_pass $api_url/health;
       access_log off;
     }
   }
@@ -234,16 +261,19 @@ http {
   # ============================================================================
 
   server {
-    listen 443 ssl http2;
+    listen 80;
+    listen 443 ssl;
+    http2 on;
     server_name justthetip.tiltcheck.me;
 
-    ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+    # ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+    # ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
-      proxy_pass http://justthetip_upstream;
+      set $jtt_url http://justthetip:3002;
+      proxy_pass $jtt_url;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -259,13 +289,15 @@ http {
     }
 
     location /_next/static/ {
-      proxy_pass http://justthetip_upstream;
+      set $jtt_url http://justthetip:3002;
+      proxy_pass $jtt_url;
       proxy_cache_valid 200 365d;
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     location /health {
-      proxy_pass http://justthetip_upstream/api/health;
+      set $jtt_url http://justthetip:3002;
+      proxy_pass $jtt_url/api/health;
       access_log off;
     }
   }
@@ -275,16 +307,19 @@ http {
   # ============================================================================
 
   server {
-    listen 443 ssl http2;
+    listen 80;
+    listen 443 ssl;
+    http2 on;
     server_name bot.tiltcheck.me;
 
-    ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+    # ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+    # ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
-      proxy_pass http://bot_upstream;
+      set $bot_url http://discord-bot:8081;
+      proxy_pass $bot_url;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -301,7 +336,8 @@ http {
     }
 
     location /health {
-      proxy_pass http://bot_upstream/health;
+      set $bot_url http://discord-bot:8081;
+      proxy_pass $bot_url/health;
       access_log off;
     }
   }
@@ -311,11 +347,13 @@ http {
   # ============================================================================
 
   server {
-    listen 443 ssl http2;
+    listen 80;
+    listen 443 ssl;
+    http2 on;
     server_name worker.tiltcheck.me;
 
-    ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+    # ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+    # ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
 
     # Restrict to internal IPs only
     # Uncomment and configure for production:
@@ -324,27 +362,27 @@ http {
     # allow 192.168.0.0/16;
     # deny all;
 
-    location / {
-      proxy_pass http://worker_upstream;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Connection "";
-      
-      # Longer timeouts for background jobs
-      proxy_connect_timeout 120s;
-      proxy_send_timeout 300s;
-      proxy_read_timeout 300s;
-      
-      limit_req zone=perip burst=5 nodelay;
-    }
+    # location / {
+    #   proxy_pass http://worker_upstream;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Host $host;
+    #   proxy_set_header X-Real-IP $remote_addr;
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header X-Forwarded-Proto $scheme;
+    #   proxy_set_header Connection "";
+    #   
+    #   # Longer timeouts for background jobs
+    #   proxy_connect_timeout 120s;
+    #   proxy_send_timeout 300s;
+    #   proxy_read_timeout 300s;
+    #   
+    #   limit_req zone=perip burst=5 nodelay;
+    # }
 
-    location /health {
-      proxy_pass http://worker_upstream/health;
-      access_log off;
-    }
+    # location /health {
+    #   proxy_pass http://worker_upstream/health;
+    #   access_log off;
+    # }
   }
 
   # ============================================================================
@@ -352,11 +390,13 @@ http {
   # ============================================================================
 
   server {
-    listen 443 ssl http2;
+    listen 80;
+    listen 443 ssl;
+    http2 on;
     server_name tiltcheck.me www.tiltcheck.me 85.209.95.175;
 
-    ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
+    # ssl_certificate     /etc/ssl/localcerts/selfsigned.crt;
+    # ssl_certificate_key /etc/ssl/localcerts/selfsigned.key;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
@@ -367,7 +407,8 @@ http {
 
     # Landing pages at root
     location / {
-      proxy_pass http://landing_upstream;
+      set $landing_url http://landing:80;
+      proxy_pass $landing_url;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -377,7 +418,8 @@ http {
 
     # User Dashboard - Discord-linked user portal
     location /user/ {
-      proxy_pass http://user_dashboard_upstream/;
+      set $user_dash_url http://user-dashboard:6001;
+      proxy_pass $user_dash_url/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -386,7 +428,8 @@ http {
     
     # Casino Data API - Re-routed to main API
     location /casino-api/ {
-      proxy_pass http://api_gateway_upstream/casino/;
+      set $api_url http://api:3001;
+      proxy_pass $api_url/casino/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -401,7 +444,8 @@ http {
     
     # Trust Dashboard Service - Main analytics interface
     location /dashboard/ {
-      proxy_pass http://dashboard_service_upstream/;
+      set $dash_service_url http://dashboard:3000;
+      proxy_pass $dash_service_url/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -411,7 +455,8 @@ http {
 
     # Gameplay Analyzer - Casino session tracking
     location /analyzer/ {
-      proxy_pass http://gameplay-analyzer:7072/;
+      set $game_arena_url http://game-arena:3010;
+      proxy_pass $game_arena_url/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -420,34 +465,35 @@ http {
     }
 
     # Enhanced Analyzer - Advanced pattern detection
-    location /enhanced/ {
-      proxy_pass http://enhanced-analyzer:7074/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto https;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      limit_req zone=perip burst=5 nodelay;
-    }
+    # location /enhanced/ {
+    #   proxy_pass http://enhanced-analyzer:7074/;
+    #   proxy_set_header Host $host;
+    #   proxy_set_header X-Real-IP $remote_addr;
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header X-Forwarded-Proto https;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade $http_upgrade;
+    #   proxy_set_header Connection "upgrade";
+    #   limit_req zone=perip burst=5 nodelay;
+    # }
 
     # Screen Analyzer - OCR and visual analysis
-    location /screen/ {
-      proxy_pass http://screen-analyzer:7073/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto https;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      limit_req zone=perip burst=5 nodelay;
-    }
+    # location /screen/ {
+    #   proxy_pass http://screen-analyzer:7073/;
+    #   proxy_set_header Host $host;
+    #   proxy_set_header X-Real-IP $remote_addr;
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header X-Forwarded-Proto https;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade $http_upgrade;
+    #   proxy_set_header Connection "upgrade";
+    #   limit_req zone=perip burst=5 nodelay;
+    # }
 
     # Legacy API endpoints (proxied to dashboard service)
     location /api/ {
-      proxy_pass http://dashboard_service_upstream/api/;
+      set $dash_service_url http://dashboard:3000;
+      proxy_pass $dash_service_url/api/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -455,9 +501,9 @@ http {
       limit_req zone=perip burst=5;
     }
 
-    # Trust Engine API
     location /trust-api/ {
-      proxy_pass http://trust-rollup:8082/;
+      set $trust_rollup_url http://trust-rollup:8082;
+      proxy_pass $trust_rollup_url/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -467,7 +513,8 @@ http {
 
     # Static asset caching
     location ~* \.(css|js|png|jpg|jpeg|gif|svg|webp|ico|woff|woff2)$ {
-      proxy_pass http://landing_upstream;
+      set $landing_url http://landing:80;
+      proxy_pass $landing_url;
       expires 1h;
       add_header Cache-Control "public, max-age=3600";
       limit_req zone=perip burst=20 nodelay;
