--- a/apps/reverse-proxy/nginx.conf
+++ b/apps/reverse-proxy/nginx.conf
@@ -405,6 +405,18 @@ http {
       return 301 https://tiltcheck.me$request_uri;
     }
 
+    # Discord OAuth Callback
+    location /auth/ {
+      set $api_url http://api:3001;
+      proxy_pass $api_url;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      limit_req zone=auth burst=5 nodelay;
+    }
+
     # Landing pages at root
     location / {
       set $landing_url http://landing:80;
