feat: consolidated discord bots (dad-bot and justthetip) into main discord-bot, implemented resource limits and memory leak fixes

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # ==============================================
-# TILTCHECK MONOREPO - MASTER ENVIRONMENT EXAMPLE
+# TILTCHECK MONOREPO - MASTER ENVIRONMENT CONFIG (TEMPLATE)
 # ==============================================
+# IMPORTANT: ROTATE ALL COMPROMISED KEYS IMMEDIATELY
 
 # --- CORE DEPLOYMENT ---
 NODE_ENV=development
 PORT=3001
 PUBLIC_BASE_URL=http://localhost:3000
 API_URL=http://localhost:3000/api
+VITE_API_URL=http://localhost:3000/api
 BACKEND_URL=http://localhost:3000
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
 DASHBOARD_URL=http://localhost:3000/dashboard
@@ -15,19 +17,19 @@ WS_URL=ws://localhost:3000/ws
 ALLOWED_ORIGINS=http://localhost:3001,https://tiltcheck.me
 
 # --- CHANNELS & ROLES ---
-TRUST_ALERTS_CHANNEL_ID=
-SUPPORT_CHANNEL_ID=
+TRUST_ALERTS_CHANNEL_ID=REPLACE_ME
+SUPPORT_CHANNEL_ID=REPLACE_ME
 MOD_CHANNEL_ID=
 MOD_ROLE_ID=
 
 # --- SECURITY & AUTH ---
-JWT_SECRET=your_jwt_secret_min_32_chars
-SESSION_SECRET=your_session_secret_min_32_chars
-SERVICE_JWT_SECRET=your_service_jwt_secret_min_32_chars
+JWT_SECRET=ROTATE_THIS_IMMEDIATELY_MIN_32_CHARS
+SESSION_SECRET=ROTATE_THIS_IMMEDIATELY_MIN_32_CHARS
+SERVICE_JWT_SECRET=ROTATE_THIS_IMMEDIATELY_MIN_32_CHARS
 SERVICE_ID=api-gateway
 ADMIN_PASSWORD=
 NEWSLETTER_SALT=
-AUTH_REDIRECT_URL=http://localhost:3000/auth/callback
+AUTH_REDIRECT_URL=http://tiltcheck.me/discord/auth/callback
 
 # --- COOKIES ---
 COOKIE_DOMAIN=localhost
@@ -36,87 +38,65 @@ COOKIE_SECURE=false
 SESSION_COOKIE_NAME=tiltcheck_session
 
 # --- DATABASE ---
-DATABASE_URL=postgresql://user:pass@localhost:5432/tiltcheck
-NEON_DATABASE_URL=
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tiltcheck
+NEON_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tiltcheck
 DATABASE_POOL_SIZE=10
 DATABASE_SSL=false
 
 # --- BLOCKCHAIN (SOLANA) ---
 SOLANA_NETWORK=mainnet
 SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+VITE_SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
 JUSTTHETIP_FEE_WALLET=
 GAS_WALLET_PUBLIC=
 
-# --- ELASTICSEARCH & TELEMETRY ---
-ELASTIC_URL=
-ELASTIC_API_KEY=
+# --- ELASTIC_SEARCH & TELEMETRY ---
+ELASTIC_URL=REPLACE_ME
+ELASTIC_API_KEY=ROTATE_THIS_IMMEDIATELY
 DEMO_USER_ID=
-LOG_LEVEL=debug
+LOG_LEVEL=info
 
 # --- SUPABASE ---
-SUPABASE_URL=
-SUPABASE_ANON_KEY=
-SUPABASE_PUBLISHABLE_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_URL=REPLACE_ME
+SUPABASE_ANON_KEY=ROTATE_THIS_IMMEDIATELY
+SUPABASE_PUBLISHABLE_KEY=ROTATE_THIS_IMMEDIATELY
+SUPABASE_SERVICE_ROLE_KEY=ROTATE_THIS_IMMEDIATELY
 
 # --- DISCORD BOT: TILTCHECK ---
-TILT_DISCORD_BOT_TOKEN=
-TILT_DISCORD_CLIENT_ID=
-TILT_DISCORD_CLIENT_SECRET=
-TILT_DISCORD_GUILD_ID=
-TILT_DISCORD_BOT_INVITE_LINK=
+TILT_DISCORD_BOT_TOKEN=ROTATE_THIS_IMMEDIATELY
+TILT_DISCORD_CLIENT_ID=REPLACE_ME
+TILT_DISCORD_REDIRECT_URI=https://tiltcheck.me/auth/discord/callback
+TILT_DISCORD_CLIENT_SECRET=ROTATE_THIS_IMMEDIATELY
+TILT_DISCORD_GUILD_ID=REPLACE_ME
+TILT_DISCORD_BOT_INVITE_LINK=REPLACE_ME
 
 # --- DISCORD BOT: JUSTTHETIP ---
-TIP_DISCORD_BOT_TOKEN=
-TIP_DISCORD_CLIENT_ID=
-TIP_DISCORD_GUILD_ID=
-TIP_DISCORD_INVITE_LINK=
-TIP_DISCORD_SUPPORT_TICKET_CHANNEL_ID=
-TIP_DISOCRD_HOW_TO_USE_BOT_CHANNEL_ID=
-TIP_DISCORD_RULES_CHANNEL_ID=
-TIP_DISCORD_ANNOUNCEMENT_CHANNEL_ID=
-TIP_DISCORD_WELCOME_CHANNEL_ID=
+TIP_DISCORD_BOT_TOKEN=ROTATE_THIS_IMMEDIATELY
+TIP_DISCORD_CLIENT_ID=REPLACE_ME
+TIP_DISCORD_GUILD_ID=REPLACE_ME
+TIP_DISCORD_INVITE_LINK=REPLACE_ME
+TIP_DISCORD_SUPPORT_TICKET_CHANNEL_ID=REPLACE_ME
 
 # --- DISCORD BOT: DA&D ---
-DAD_DISCORD_BOT_TOKEN=
-DAD_DISCORD_CLIENT_ID=
-DAD_DISCORD_GUILD_ID=
+DAD_DISCORD_BOT_TOKEN=ROTATE_THIS_IMMEDIATELY
+DAD_DISCORD_CLIENT_ID=REPLACE_ME
+DAD_DISCORD_GUILD_ID=REPLACE_ME
 
 # --- FEATURE FLAGS & COMMON SETTINGS ---
 SUSLINK_AUTO_SCAN=true
 TRUST_THRESHOLD=60
 MOD_NOTIFICATIONS_ENABLED=true
-MOD_RATE_LIMIT_WINDOW_MS=60000
-MOD_MAX_NOTIFICATIONS_PER_WINDOW=10
-MOD_DEDUPE_WINDOW_MS=300000
-SKIP_DISCORD_LOGIN=false
-ENABLE_CASINO_VERIFICATION=true
-COMMAND_PREFIX=/
-OWNER_ID=
-
-# --- APP SPECIFIC: AUTO-CLAIMER ---
-FOUNDER_USERNAMES=jmenichole
 
 # --- APP SPECIFIC: DISCORD BOTS ---
 JUPITER_ENDPOINT=https://api.jup.ag/ultra
-JUPITER_API_KEY=
-TIP_TREASURY_WALLET=
-TIP_FEE_WALLET=
-
-# --- DATA STORAGE & LOGGING ---
-LOCKVAULT_STORE_PATH=./data/lockvault-store.json
-PENDING_TIPS_STORE_PATH=./data/pending-tips-store.json
-COLLECTCLOCK_LOG_DIR=./logs/collectclock
-LANDING_LOG_PATH=./logs/landing.log
-TRUST_ENGINES_LOG_DIR=./logs/trust-engines
-TRUST_ENGINES_PERSIST_DIR=./data
-
-# --- HEALTH CHECK PORTS ---
-DISCORD_BOT_HEALTH_PORT=8081
-DAD_BOT_HEALTH_PORT=8082
-EVENT_ROUTER_HEALTH_PORT=8083
+JUPITER_API_KEY=ROTATE_THIS_IMMEDIATELY
+TIP_TREASURY_WALLET=REPLACE_ME
+TIP_FEE_WALLET=REPLACE_ME
 
 # --- EXTERNAL APIS ---
-OPENAI_API_KEY=
-CASINO_API_KEY=
+OPENAI_API_KEY=ROTATE_THIS_IMMEDIATELY
+CASINO_API_KEY=ROTATE_THIS_IMMEDIATELY
 CASINO_API_PORT=6002
+
+# --- WALLET PRIVATE KEYS (CRITICAL) ---
+JUSTTHETIP_BOT_WALLET_PRIVATE_KEY=ROTATE_THIS_IMMEDIATELY_DO_NOT_COMMIT
