--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
       dockerfile: apps/discord-bot/Dockerfile
     container_name: discord-bot
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
@@ -21,6 +25,10 @@ services:
     ports:
       - "3001:3001"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
@@ -41,6 +49,10 @@ services:
     ports:
       - "5055:3000"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
@@ -61,6 +73,10 @@ services:
     ports:
       - "3002:3001"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
@@ -76,23 +92,15 @@ services:
     ports:
       - "8080:80"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 256M
     healthcheck:
       test: [ "CMD-SHELL", "wget -qO- http://localhost:80/status.html || exit 0" ]
       interval: 60s
       timeout: 5s
       retries: 3
-    networks:
-      - tiltcheck-network
-
-  dad-bot:
-    build:
-      context: .
-      dockerfile: apps/dad-bot/Dockerfile
-    container_name: dad-bot
-    restart: unless-stopped
-    env_file: .env
-    environment:
-      - SKIP_ENV_VALIDATION=1
     networks:
       - tiltcheck-network
 
@@ -104,30 +112,14 @@ services:
     ports:
       - "8082:8082"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
       - PORT=8082
-    networks:
-      - tiltcheck-network
-
-  justthetip:
-    build:
-      context: .
-      dockerfile: apps/justthetip-bot/Dockerfile
-    container_name: justthetip
-    ports:
-      - "1501:3002"
-    restart: unless-stopped
-    env_file: .env
-    environment:
-      - SKIP_ENV_VALIDATION=1
-      - PORT=3002
-    healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://localhost:3002/health || exit 0" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
     networks:
       - tiltcheck-network
 
@@ -139,6 +131,10 @@ services:
     ports:
       - "6001:6001"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
@@ -154,6 +150,10 @@ services:
     ports:
       - "7071:3010"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     env_file: .env
     environment:
       - SKIP_ENV_VALIDATION=1
@@ -170,6 +170,10 @@ services:
       - "81:80"
       - "444:443"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 128M
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /home/jme/certbot:/var/www/certbot:ro
